# Iron-Tide

./: CMakeLists.txt  Car.cpp  Car.h  LICENSE.txt  README.md  main.cpp
src/client/: Car.cpp  ClientCommunicator.cpp  ClientCommunicator.h  main_client.cpp
src/server/: ServerCommunicator.cpp  ServerCommunicator.h  main_server.cpp
src/shared/ecs/: components.h
